# matthewkmayer.github.io

./: .gitmodules  LICENSE  README.md  index.html  rusoto-sample.html
blag/: config.toml  index.html
blag/content/about/: _index.md
blag/content/post/: 2018-break.md  2019-break.md  2020-technical-review.md  2024-in-review.md  2025-in-review.md  2026-dealing-with-git.md  aoc-twy-01.md  aws-codebuild-golang.md  build-ci-cd.md  chaining-rusoto-futures.md  ci-cd-pipeline.md  closed-loop-development.md  dont-hotpatch.md  farewell-rusoto.md  good-to-great.md  how-much-testing.md  how-to-split-changes.md  jj-for-my-workflow.md  postgres-tls.md  pull-requests-arent-completed-tickets.md  red-green-bugfix.md  repos-for-being-hired.md  resources-list.md  rusoto-2017-in-review.md  rusoto-codegen-part-three.md  rusoto-codegen-part-two.md  rusoto-codegen.md  rusoto-rds-mk2.md  rusoto-rds-walkthrough.md  rust-2018.md  rust-2019-roadmap.md  rust-as-abs.md  rustconf-2017-recap.md  (+6 more)
blag/public/: index.html  index.xml  sitemap.xml
rusoto-rds/: Cargo.toml
rusoto-rds/src/: main.rs
samples/postgres-tls-tester/: Cargo.toml
samples/rusoto-chained-futures/: Cargo.toml  README.md
samples/rusoto-local-dynamodb/: Cargo.toml  README.md
samples/rusoto-local-dynamodb/src/: main.rs
samples/rusoto-rds-mk2/: Cargo.toml
samples/rusoto-rocket/: .env  Cargo.toml
samples/rusoto-rocket-mk2/: .env  Cargo.toml
samples/rusoto-rocket/migrations/20170503003554_hit_counter/: up.sql
samples/rusoto-rocket/src/: lib.rs  models.rs
samples/rusoto-s3-select/: Cargo.toml  README.md
(+63 files in other folders)
