[package]
name = "rusoto-local-dynamodb"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[dependencies]
rusoto_core = { git = "https://github.com/rusoto/rusoto", branch = "service-request-trait" }
rusoto_dynamodb = { git = "https://github.com/rusoto/rusoto", branch = "service-request-trait" }
